fable/test/syntax_error/common_with_data_size.f
      program prog
      common /com/ vals(2), nums*4(2)
      end
